# AirGap-MPLS-Copilot

./: .gitignore  .sdwan-mpls.clab.yml.bak  Bulk_fault_injector.sh  README.md  ai_copilot.py  docker-compose.ai.yml  fault_injector.sh  network_simulation.sh  pyproject.toml  requirements.txt  run.py  sdwan-mpls.clab.yml  setup.md  setup.sh  telemetry_agent.py  test_llm.py
Dashboard/: Dashboard.py  app.py
Dashboard/components/: copilot_chat.py  prediction_table.py  sidebar.py  topology_graph.py
Dashboard/pages/: copilot.py  dashboard.py  incidents.py  prediction.py  telemetry.py  topology.py
Dashboard/services/: api_client.py
Dashboard/utils/: telemetry_reader.py
Model/: predictive_brain.joblib  predictive_engine.ipynb
api/: app.py  routes.py  schemas.py
backend/: __init__.py  config.py  incident_engine.py  llm_engine.py  memory_engine.py  models.py  orchestrator.py  predictor.py  priority_engine.py  rag_engine.py  telemetry.py  topology_engine.py
config/edge-br/: frr.conf
config/edge-dc/: frr.conf
config/edge-hub/: daemons  frr.conf
config/p-core/: daemons  frr.conf
config/pe-br/: frr.conf
config/pe-dc/: frr.conf
config/pe-hub/: frr.conf
rag_docs/incidents/: congestion_case_01.md  incident_template.md  route_flap_case_01.md  (+1 more)
scripts/: download_embeddings_tmp.py  ingest_docs.py  start_traffic.sh  validate_scenarios.py
streamlit_app/: app.py
test/: debug_engines.py  test_llm.py
tests/: conftest.py  test_api_contracts.py  test_api_routes.py  test_llm_engine.py  test_memory_engine.py  test_orchestrator.py  test_priority_engine.py
(+22 files in other folders)
