[project]
name = "airgap-mpls-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "streamlit-agraph>=0.0.45",
]
